vim/templates/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: my-ns
spec:
  ports:
  - name: web
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: my-app
